--- a/public/index.html
+++ b/public/index.html
@@ -2,26 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description"
-      content="Landy is a free React landing page template designed for developers and startups." />
+      content="NKD Injectors - High-quality diesel injectors for optimal engine performance." />
     <meta name="keywords"
-      content="Landy is a free React landing page template designed for developers and startups." />
-    <meta property="og:title" content="Landy - React Template" />
+      content="diesel injectors, NKD Injectors, engine performance, fuel efficiency" />
+    <meta property="og:title" content="NKD Injectors - Premium Diesel Injectors" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://landy.website/" />
+    <meta property="og:url" content="https://nkdinjectors.com/" />
     <meta property="og:description"
-      content="Landy is a free React landing page template designed for developers and startups." />
+      content="NKD Injectors provides top-quality diesel injectors for improved engine performance and fuel efficiency." />
     <meta name="robots" content="index, follow" />
-    <meta property="og:locale" content="en_EN" />
-    <meta property="og:site_name" content="Landy" />
-    <meta property="og:url" content="https://landy.website/" />
-    <meta property="twitter:title" content="Landy - React Template" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="NKD Injectors" />
+    <meta property="og:url" content="https://nkdinjectors.com/" />
+    <meta property="twitter:title" content="NKD Injectors - Premium Diesel Injectors" />
     <meta property="twitter:description"
-      content="Landy is a free React landing page template designed for developers and startups." />
-    <meta property="twitter:site" content="https://landy.website/" />
+      content="NKD Injectors provides top-quality diesel injectors for improved engine performance and fuel efficiency." />
+    <meta property="twitter:site" content="https://nkdinjectors.com/" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Landy - React Template</title>
+    <title>NKD Injectors - Premium Diesel Injectors</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
