fix contact form

--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,17 @@
       content="diesel injectors, NKD Injectors, engine performance, fuel efficiency" />
     <meta property="og:title" content="NKD Injectors - Premium Diesel Injectors" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://nkdinjectors.com/" />
+    <meta property="og:url" content="https://nkdinjectors.co.za/" />
     <meta property="og:description"
       content="NKD Injectors provides top-quality diesel injectors for improved engine performance and fuel efficiency." />
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="NKD Injectors" />
-    <meta property="og:url" content="https://nkdinjectors.com/" />
+    <meta property="og:url" content="https://nkdinjectors.co.za/" />
     <meta property="twitter:title" content="NKD Injectors - Premium Diesel Injectors" />
     <meta property="twitter:description"
       content="NKD Injectors provides top-quality diesel injectors for improved engine performance and fuel efficiency." />
-    <meta property="twitter:site" content="https://nkdinjectors.com/" />
+    <meta property="twitter:site" content="https://nkdinjectors.co.za/" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
